platform/openshift/inventory-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  namespace: <nome_progetto_openshift>
spec:
  replicas: 1
  selector:
    matchLabels: { app: inventory-service }
  template:
    metadata:
      labels: { app: inventory-service }
    spec:
      containers:
      - name: inventory-service
        image: image-registry.openshift-image-registry.svc:5000/<nome_progetto_openshift>/inventory-service:latest
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet: { path: "/q/health/ready", port: 8080 }
          initialDelaySeconds: 5
          timeoutSeconds: 3
        livenessProbe:
          httpGet: { path: "/q/health/live", port: 8080 }
          initialDelaySeconds: 10
          timeoutSeconds: 3
