platform/openshift/inventory-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: <nome_progetto_openshift>
spec:
  selector: { app: inventory-service }
  ports:
  - name: http
    port: 80
    targetPort: 8080
