platform/openshift/inventory-service/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: inventory-service
  namespace: antonio-dimarino-dev
spec:
  to: { kind: Service, name: inventory-service }
  port:
    targetPort: http
